Fix textarea's missing border

--- a/src/types/textarea.css
+++ b/src/types/textarea.css
@@ -25,8 +25,6 @@
     width: 100%;
     height: 100%;
 
-    border: none;
-
     /* Remove WebKit user-resize widget */
     resize: none;
 }
